<resources>
    <string name="app_name">AT2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_da_musica">Nome da Musica</string>
    <string name="senha">Senha</string>
    <string name="usuario">Usuario</string>
    <string name="n_o_tem_login_cadastre_se_aqui">Não tem login? Cadastre-se aqui</string>
    <string name="logar">Logar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="nome">Nome</string>
</resources>